# NEXUS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.bat  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  vendor_support_request.md
.github/workflows/: tests.yml  validate.yml
config/: chassis_map_template.json
config/vendors/: ami_megarac.json  dell_idrac9.json  generic_redfish.json  hpe_ilo5.json  insyde_openedition.json  lenovo_xcc2.json  openbmc_ast2600.json  supermicro_x12.json
core/: nexus_orchestrator_v4.py
docs/: architecture.md  ip_notice.md  liquid_cooling.md  redfish_compatibility.md  vector_slot_map.md
examples/: mock-chassis.json
integrations/slurm/: nexus_slurm_prolog.sh
nexus/: __init__.py  actuator.py  arbitration.py  bus_bar.py  history.py  invariant.py  orchestrator.py  telemetry.py
nexus-expanded/: 00_START_HERE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  README.md  demo_quickstart.py  demo_runner.py  quickstart.py  requirements.txt  setup.bat  setup.sh  validate.py
nexus-expanded/01_Documentation/: README.md  REDFISH_COMPATIBILITY.md
nexus-expanded/03_Core_Logic/: nexus_orchestrator.py  nexus_orchestrator_v4.py  solver_wrapper.py
nexus-expanded/04_Infrastructure/: bmc_signal_poller.py  nexus_input_manager.py  nexus_output_manager.py  redfish_client.py  redfish_extended.py
nexus-expanded/05_Testing_Tools/: mock_workload_generator.py  (+1 more)
tests/: test_actuator.py  test_bus_bar.py  test_history.py  test_invariant.py  test_orchestrator.py  test_predictor.py
tools/: validate_v4.py
(+13 files in other folders)
